--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Trabalho Final</string>
+    <string name="title_activity_home">Categorias</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_home_activiry">Categorias</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Delivery ColdBeer</string>
+    <string name="nav_header_subtitle">sac@coldbeer.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="title_activity_produtos">Produtos</string>
+    <string name="title_activity_confirmar_pedido">Confirmar Pedido</string>
+    <string name="title_activity_signup">Cadastrar Conta</string>
+    <string name="title_activity_detalhes_pedido">Detalhes Produto</string>
+    <string name="title_activity_carrinho">CarrinhoActivity</string>
 </resources>
